--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
                 <h3>UI/UX Design (Figma)</h3>
             </div>
             <div class="skill-card">
-                <div class="skill-icon analytics">
-                    <i class="fas fa-chart-line"></i>
+                <div class="skill-icon design">
+                    <i class="fas fa-palette"></i>
                 </div>
-                <h3>System Analysis & Design</h3>
+                <h3>Productivity (Word, PowerPoint)</h3>
             </div>
             <div class="skill-card">
-                <div class="skill-icon visualization">
-                    <i class="fas fa-chart-bar"></i>
+                <div class="skill-icon design">
+                    <i class="fas fa-palette"></i>
                 </div>
-                <h3>Data Visualization</h3>
+                <h3>Teamwork</h3>
             </div>
         </div>
     </section>
@@ -199,8 +199,11 @@
                 </div>
                 <div class="project-content">
                     <div class="project-category">Web Development</div>
-                    <h3>Professional Indoor Navigation and Information System for the Provincial Capitol</h3>
-                    <p>A hybrid indoor navigation and information platform designed to help visitors and employees navigate the three floors of the Provincial Capitol as our Capstone project.</p>
+                    <h3>Gabay: Navigation System for Negros Occidental
+Provincial Capitol</h3>
+                    <p>Navigation System for Negros Occidental
+Provincial Capitol, designed to assist both government employees and the public in
+locating offices and accessing information efficiently.</p>
                     <div class="project-tech">
                         <span>HTML</span>
                         <span>JavaScript</span>
@@ -274,6 +277,28 @@
                         <span>Photography</span>
                         <span>Adobe Lightroom</span>
                         
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-media">
+                    <img src="./My projects/ColorPickerPro.png" alt="Color Picker for Developers" class="project-image">
+                    <div class="project-overlay">
+                        <div class="project-links">
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-content">
+                    <div class="project-category">Desktop/Cross Platform Apps</div>
+                    <h3>Color Picker for Developers</h3>
+                    <p>A professional, feature-rich color picker designed for modern developers who demand precision, accessibility, and real-world context.</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>JavaScript</span>
+                        <span>Electron.js</span>
                     </div>
                 </div>
             </div>
