--- a/index.html
+++ b/index.html
@@ -346,31 +346,7 @@ locating offices and accessing information efficiently.</p>
             </div>
         </div>
     </section>
-
-    <!-- Chatbase Chatbot -->
-    <script>
-    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="RoSh63TiToXPRk-L_12eT";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
-    </script>
-
-    <!-- Chatbase animation tweaker -->
-    <script>
-    (function tweakChatbase(){
-        const observer = new MutationObserver((mutations) => {
-            const btn = document.querySelector('#chatbase-bubble-button, .chatbase-bubble-button, [data-testid="bubble-button"]');
-            if (btn && !btn.classList.contains('cb-pulse')) {
-                btn.classList.add('cb-pulse');
-                observer.disconnect();
-            }
-        });
-        observer.observe(document.body, { childList: true, subtree: true });
-        
-        // Fallback if MutationObserver doesn't catch it
-        setTimeout(() => {
-            const btn = document.querySelector('#chatbase-bubble-button, .chatbase-bubble-button, [data-testid="bubble-button"]');
-            if (btn) btn.classList.add('cb-pulse');
-        }, 2000);
-    })();
-    </script>
-
+    <script src = "chatbot.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
