--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                     <img src="My projects/image.png" alt="E-commerce Website" class="project-image">
                     <div class="project-overlay">
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="#" class="gabay.infinityfree.me"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Excellsus/GABAY-4" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -287,7 +287,7 @@ locating offices and accessing information efficiently.</p>
                     <div class="project-overlay">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Excellsus/Color-Picker-by-Excellsus" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
